--- a/src/main/resources/templates/lista-utilizadores.html
+++ b/src/main/resources/templates/lista-utilizadores.html
@@ -39,6 +39,7 @@
         </table>
     <hr>
     <a class="btn btn-primary" href="/novo"> Registar novo utilizador.</a>
+    <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
 </div>
 
 
